--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     }
   ],
   "require": {
-    "php": ">=7.0",
+    "php": "^7.1.3",
     "guzzlehttp/guzzle": "~6.0",
     "illuminate/support": "~5.6.0"
   },
